--- a/AboutMe.html
+++ b/AboutMe.html
@@ -155,7 +155,7 @@
           <div class="skill"><p>API Development</p><div class="bar" style="width: 40%;">40%</div></div>
           <div class="skill"><p>React</p><div class="bar" style="width: 40%;">40%</div></div>
           <div class="skill"><p>HTML5</p><div class="bar" style="width: 92%;">92%</div></div>
-          <div class="skill"><p></p>CSS<div class="bar" style="width: 99%;">99%</div></div>
+          <div class="skill"><p>Mathlab</p><div class="bar" style="width: 99%;">99%</div></div>
           <div class="skill"><p>JavaScript</p><div class="bar" style="width: 40%;">40%</div></div>
         </div>
 
