--- a/AboutMe.html
+++ b/AboutMe.html
@@ -146,7 +146,7 @@
           <div class="skill"><p>API comunication(Swagger)</p><div class="bar" style="width: 90%;">90%</div></div>
           <div class="skill"><p>Development Tools - Enviroments Vite.js /Github / Git </p><div class="bar" style="width: 80%;">80%</div></div>
           <div class="skill"><p>Methoddologies/ practises(Scrum )</p><div class="bar" style="width: 92%;">92%</div></div>
-          <div class="skill"><p></p><div class="bar" style="width: 99%;">99%</div></div>
+          <div class="skill"><p>CSS</p><div class="bar" style="width: 99%;">99%</div></div>
           <div class="skill"><p>JavaScript</p><div class="bar" style="width: 40%;">40%</div></div>
         </div>
 
