--- a/AboutMe.html
+++ b/AboutMe.html
@@ -13,22 +13,20 @@
 <body>
     <section id="Home">
 
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-
-<div class="navbar">
-
-    <div class="Brand-Name"><h2>Hanan Ahmed</h2></div>
     
-      <ul class="link">
+<div class="navbar" style="position: relative;">
 
-        <li class="nav-item"><a href="#Home" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#Skills" class="nav-link">Expertise & Skills</a></li>
-        <li class="nav-item"><a href="#Project" class="nav-link">Project</a></li>
-        <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-        <li><button id="toggle-theme" class="theme-toggle">🌙 Dark Mode</button>
-        </li>
-      </ul>
-  </div>
+  <div class="Brand-Name"><h2>Hanan Ahmed</h2></div>
+  
+  <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+  
+  <ul class="link">
+    <li class="nav-item"><a href="#Home" class="nav-link active" aria-current="page">Home</a></li>
+    <li class="nav-item"><a href="#Skills" class="nav-link">Expertise & Skills</a></li>
+    <li class="nav-item"><a href="#Project" class="nav-link">Project</a></li>
+    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+    <li><button id="toggle-theme" class="theme-toggle">🌙 Dark Mode</button></li>
+  </ul>
 
 </div>
 
